--- a/packages/krystal-walletconnect-v2/package.json
+++ b/packages/krystal-walletconnect-v2/package.json
@@ -5,6 +5,9 @@
     "web3-react",
     "walletconnect"
   ],
+  "engines": {
+    "node": "16.18.1"
+  },
   "author": "Mike Grabowski <mike.grabowski@uniswap.org>",
   "license": "GPL-3.0-or-later",
   "repository": "github:Uniswap/web3-react",
